--- a/index.html
+++ b/index.html
@@ -91,6 +91,30 @@
     text-align: center;
     pointer-events: none; /* ne bloque pas scroll */
   }
+  @keyframes popupGrow {
+    0%   { transform: translate(-50%, -50%) scale(1); }
+    50%  { transform: translate(-50%, -50%) scale(1.3); }
+    100% { transform: translate(-50%, -50%) scale(1.2); }
+  }
+
+  .popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1); /* scale initial */
+    background: #e63946;
+    color: #fff;
+    padding: 30px 60px;
+    font-size: 28px;
+    font-weight: bold;
+    border-radius: 10px;
+    display: none;
+    z-index: 999;
+    box-shadow: 0 0 30px #fff;
+    text-align: center;
+    pointer-events: none;
+    transition: transform 0.3s ease;
+  }
   #audio-toggle {
     position: fixed;
     top: 10px;
@@ -222,7 +246,10 @@ function startErrorScroll(){
   let index=0;
   const intervalTime=TOTAL_SCROLL_MS/LINES;
 
-  setTimeout(()=>{ popup.style.display="block"; },PRE_POPUP_MS);
+  setTimeout(() => {
+    popup.style.display = "block";
+    popup.style.animation = "popupGrow 0.8s ease forwards";
+  }, PRE_POPUP_MS);
 
   const scrollInterval=setInterval(()=>{
     if(index<errors.length){
