--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     padding: 30px;
     border-radius: 10px;
     text-align: center;
-    width: 350px; /* largeur initiale */
+    width: 500px; /* largeur initiale */
     max-height: 90vh;
     overflow: hidden;
     box-shadow: 0 0 20px #0f0;
   }
   /* Box pour erreurs */
   .container {
-    width: 500px; /* largeur pour erreurs */
+    width: 350px; /* largeur pour erreurs */
   }
   input, button {
     font-family: monospace;
@@ -93,7 +93,6 @@
   }
   @keyframes popupGrow {
     0%   { transform: translate(-50%, -50%) scale(1); }
-    50%  { transform: translate(-50%, -50%) scale(1.3); }
     100% { transform: translate(-50%, -50%) scale(1.2); }
   }
 
@@ -113,7 +112,6 @@
     box-shadow: 0 0 30px #fff;
     text-align: center;
     pointer-events: none;
-    transition: transform 0.3s ease;
   }
   #audio-toggle {
     position: fixed;
@@ -248,7 +246,7 @@ function startErrorScroll(){
 
   setTimeout(() => {
     popup.style.display = "block";
-    popup.style.animation = "popupGrow 0.8s ease forwards";
+    popup.style.animation = "popupGrow 4s forwards";
   }, PRE_POPUP_MS);
 
   const scrollInterval=setInterval(()=>{
