--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
     text-align: center;
     pointer-events: none;
   }
+  @keyframes fallDown {
+    0%   { transform: translateY(0); opacity: 1; }
+    100% { transform: translateY(100vh); opacity: 0; }
+  }
+  .fall {
+    animation: fallDown 2s forwards;
+  }
   #audio-toggle {
     position: fixed;
     top: 10px;
@@ -239,21 +246,25 @@ function startErrorScroll(){
     } else { clearInterval(scrollInterval); show404(); }
   }, intervalTime);
 }
-
-function show404(){
-  document.body.innerHTML=`
+function show404() {
+  // Crée les éléments finaux
+  document.body.innerHTML = `
     <div id="error-screen" style="color:#f00; text-align:center; font-family:monospace;">
       <h1 id="error-text" style="cursor:pointer;">404 Not Found</h1>
       <p id="click-text" style="cursor:pointer;">The page you are looking for does not exist.</p>
     </div>
   `;
-  document.body.style.background="#000";
-
-  document.getElementById("error-text").addEventListener("click",()=>{
-    document.getElementById("error-text").textContent=(finalNumber!==null)?String(finalNumber):"ERROR";
+  document.body.style.background = "#000";
+  // Ajoute les listeners pour faire tomber les textes au clic
+  document.getElementById("error-text").addEventListener("click", () => {
+    const el = document.getElementById("error-text");
+    el.textContent = (finalNumber !== null) ? String(finalNumber) : "ERROR";
+    el.classList.add("fall"); // déclenche l'animation "tomber"
   });
-  document.getElementById("click-text").addEventListener("click",()=>{
-    document.getElementById("click-text").textContent="Hello World";
+  document.getElementById("click-text").addEventListener("click", () => {
+    const el = document.getElementById("click-text");
+    el.textContent = "Hello World";
+    el.classList.add("fall"); // déclenche l'animation "tomber"
   });
 }
 </script>
